test/fail/lexer-offset-1504.mo
/*
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo, elit lacinia venenatis bibendum, neque tortor congue ante, in viverra metus tellus eu tellus.
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo, elit lacinia venenatis bibendum, neque tortor congue ante, in viverra metus tellus eu tellus.
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo, elit lacinia venenatis bibendum, neque tortor congue ante, in viverra metus tellus eu tellus.
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo, elit lacinia venenatis bibendum, neque tortor congue ante, in viverra metus tellus eu tellus.
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo, elit lacinia venenatis bibendum, neque tortor congue ante, in viverra metus tellus eu tellus.
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo, elit lacinia venenatis bibendum, neque tortor congue ante, in viverra metus tellus eu tellus.
 */
// Any syntax error here will be further into the lexbuf than 1024bytes
actor { debug_show
